--- a/index9Using.html
+++ b/index9Using.html
@@ -9,6 +9,25 @@
     <script src="https://cdn.jsdelivr.net/npm/web3@4.8.0/dist/web3.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@babel/standalone@latest/babel.min.js"></script>
+    <style>
+        /* 确保 html 和 body 支持居中 */
+        html, body {
+            margin: 15px;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #root {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
 <div id="root" className="min-h-screen bg-gray-100 flex items-center justify-center"></div>
@@ -30,14 +49,14 @@
         {"constant": false, "inputs": [{"name": "to", "type": "address"}, {"name": "amount", "type": "uint256"}], "name": "transferInBank", "outputs": [], "type": "function"}
     ];
 
-    const TOKEN_ADDRESS = '0x5FbDB2315678afecb367f032d93F642f64180aa3';
-    const BANK_ADDRESS = '0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512';
+    const TOKEN_ADDRESS = '0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9';
+    const BANK_ADDRESS = '0x5FC8d32690cc91D4c39d9d3abcBD16989F875707';
 
     const CHAINS = {
         '1': { name: 'Ethereum Mainnet', rpc: 'https://mainnet.infura.io/v3/YOUR_INFURA_PROJECT_ID', chainId: '0x1', nativeCurrency: { name: 'Ether', symbol: 'ETH', decimals: 18 }, explorer: 'https://etherscan.io' },
         '137': { name: 'Polygon Mainnet', rpc: 'https://polygon-rpc.com', chainId: '0x89', nativeCurrency: { name: 'MATIC', symbol: 'MATIC', decimals: 18 }, explorer: 'https://polygonscan.com' },
         '56': { name: 'BNB Chain', rpc: 'https://bsc-dataseed.binance.org', chainId: '0x38', nativeCurrency: { name: 'BNB', symbol: 'BNB', decimals: 18 }, explorer: 'https://bscscan.com' },
-        '31337': { name: 'Hardhat Local', rpc: 'http://127.0.0.1:8545', chainId: '0x7a69', nativeCurrency: { name: 'ETH', symbol: 'ETH', decimals: 18 }, explorer: '' }
+        '31337': { name: 'Hardhat 本地', rpc: 'http://127.0.0.1:8545', chainId: '0x7a69', nativeCurrency: { name: 'ETH', symbol: 'ETH', decimals: 18 }, explorer: '' }
     };
 
     const App = () => {
@@ -186,12 +205,12 @@
                     setError(`授权金额不足，当前: ${allowanceInEther} ${tokenSymbol}, 所需: ${amount} ${tokenSymbol}`);
                     return;
                 }
-                if (BigInt(walletBal) < BigInt(amountWei/(10 ** 18))) {
+                if (BigInt(walletBal/(10 ** 18)) < BigInt(amountWei/(10 ** 18))) {
                     debugger
                     setError(`钱包余额不足，当前: ${web3.utils.fromWei(walletBal, 'ether')} ${tokenSymbol}, 所需: ${amount} ${tokenSymbol}`);
                     return;
                 }
-                if (BigInt(ethBalance) < BigInt(web3.utils.toWei('0.01', 'ether'))) {
+                if (BigInt(ethBalance/(10 ** 18)) < BigInt(web3.utils.toWei('0.01', 'ether'))) {
                     debugger
                     setError(`ETH 余额不足以支付 Gas 费用，当前: ${web3.utils.fromWei(ethBalance, 'ether')} ETH`);
                     return;
@@ -199,7 +218,9 @@
 
                 const bankContract = new web3.eth.Contract(BANK_ABI, BANK_ADDRESS);
                 console.log("start .....", account)
-                const tx = await bankContract.methods.depositToAddress(amountWei/(10 ** 18)).send({ from: account });
+                const a = amountWei/(10 ** 18);
+                console.log("a .....", a)
+                const tx = await bankContract.methods.depositToAddress(amountWei/(10 ** 18)).send({ from: account, gas: 300000 });
                 //const tx = await bankContract.methods.depositToAddress(amountWei/(10 ** 18)).send({ from: account, gas: 300000 });
                 console.log("end .....")
                 console.log('Deposit Transaction Hash:', tx.transactionHash);
@@ -283,7 +304,8 @@
 
         return (
             <div className="bg-white p-8 rounded-lg shadow-lg max-w-md w-full">
-                <h1 className="text-2xl font-bold mb-4 text-center">多链钱包连接</h1>
+
+                <h3 className="font-bold mb-4 text-center">多链钱包连接</h3>
 
                 {error && <div className="bg-red-100 text-red-700 p-3 rounded mb-4">{error}</div>}
 
@@ -292,7 +314,7 @@
                 ) : (
                     <div>
                         <p className="text-sm mb-2"><span className="font-semibold">账户:</span> <span className="break-all">{account}</span></p>
-                        <p className="text-sm mb-2"><span className="font-semibold">当前链:</span> {chainId ? CHAINS[parseInt(chainId, 16)]?.name || '未知链' : '未连接'}</p>
+                        <p className="text-sm mb-2"><span className="font-semibold">当前链:</span> {chainId ? CHAINS[parseInt(chainId, 16)]?.name || 'HARDHAT' : '未连接'}</p>
                         {walletBalance && (
                             <p className="text-sm mb-2"><span className="font-semibold">钱包余额:</span> {walletBalance} {tokenSymbol}</p>
                         )}
